--- a/Chap2-DoubleBeta.tex
+++ b/Chap2-DoubleBeta.tex
@@ -19,25 +19,25 @@
 \bigskip
 
 
-\NI There are still remaining questions in neutrino physics including their nature and how they acquire their masses. Since it has been proved that the neutrinoless double beta decay necessarily involves Majorana neutrino, the search for this hypothetical decay is one of the most active research topic in neutrino physics. Its observation will give access of their Majorana nature and may also give access to their absolute mass scale.
+\NI There are still remaining questions in neutrino physics including their nature and how they acquire their masses. Since it has been proven that the neutrinoless double beta decay necessarily involves Majorana neutrino, the search for this hypothetical decay is one of the most active research topic in neutrino physics. Its observation will give access of their Majorana nature and may also give access to their absolute mass scale.
 
 
 \bigskip
 
 
-\NI Before to discuss the neutrinoless double beta decay in Section~\ref{sec:0NeutrinoDBD}, some elements about simple beta decay and double beta decay are introduced in Sections~\ref{sec:betaDecay} and~\ref{sec:2NeutrinoDBD}. The different double beta decay experiments and the status of the researches are respectively presented in Section~\ref{sec:DBDexperiment} and~\ref{sec:StatusDBD}.
+\NI Before to discuss the neutrinoless double beta decay in Section~\ref{sec:0NeutrinoDBD}, some elements about simple beta decay and double beta decay are introduced in Sections~\ref{sec:betaDecay} and~\ref{sec:2NeutrinoDBD}. The different double beta decay experiments and the status of the searches are respectively presented in Section~\ref{sec:DBDexperiment} and~\ref{sec:StatusDBD}.
 
 
 \section{Beta decay}\label{sec:betaDecay}
 
 
-\NI Beta decay is a radioactive decay which transmutes a nucleus to a different one. This decay is mediated by the weak interaction and is always accompanied by a neutrino or antineutrino emission. Beta decays have been sorted in three forms :
+\NI Beta decay is a radioactive decay which transmutes a nucleus to a different one. This decay is mediated by the weak interaction and is always accompanied by a neutrino or antineutrino emission. Beta decays have been sorted in three categories :
 
 
 \bigskip
 
 
-\NI $\boldsymbol{\beta^-}$ \textbf{decay}, in which a neutron converts to a proton, an electron, and a antineutrino are emitted :
+\NI $\boldsymbol{\beta^-}$ \textbf{decay}, in which a neutron converts to a proton, an electron, and an antineutrino are emitted :
 \begin{equation}
 \text{n} \rightarrow \text{p} + \text{e}^- + \bar{\nu}_\text{e}
 \end{equation}
@@ -55,7 +55,7 @@
 \bigskip 
 
  
-\NI \textbf{Electron capture (EC)}, in which an atomic electron is captured by its nucleus, resulting in the emission of a neutrino :
+\NI \textbf{Electron capture (EC)}, in which an atomic electron is captured by its nucleus, resulting in the emission of a single neutrino :
 \begin{equation}
 \text{p} + \text{e}^- \rightarrow \text{n} + \nu_{\text{e}}
 \end{equation} 
@@ -340,7 +340,7 @@ $^{\text{238}}$U $\rightarrow$ $^{\text{238}}$Pu & 1145.8  $\pm$ 1.7 & 99.275 & 
 \bigskip
 
 
-\NI where G$_{\text{0}\nu}$ is a two-body phase space factor which are well kwown, M$^\text{2}_{\text{0}\nu}$ is the 0$\nu\beta\beta$ NME, which is not trivial to evaluate due to the high number of nucleons, and $\eta$ is a lepton violating number parameter which take into account all the physics behind 0$\nu\beta\beta$ mechanism. This parameter varies according the mechanism via which 0$\nu\beta\beta$ is mediated.  
+\NI where G$_{\text{0}\nu}$ is a two-body phase space factor which is well kwown, M$^\text{2}_{\text{0}\nu}$ is the 0$\nu\beta\beta$ NME, which is not trivial to evaluate due to the high number of nucleons, and $\eta$ is a lepton violating number parameter which take into account all the physics behind 0$\nu\beta\beta$ mechanism. This parameter varies according the mechanism via which 0$\nu\beta\beta$ is mediated.  
 
 
 \FloatBarrier
@@ -362,7 +362,7 @@ $^{\text{238}}$U $\rightarrow$ $^{\text{238}}$Pu & 1145.8  $\pm$ 1.7 & 99.275 & 
 \end{figure}
 
 
-\NI The $\eta$ parameter is given by the effective neutrino mass (m$_{\beta\beta}$) and the half-life can be expressed as: 
+\NI In this model, the $\eta$ parameter is given by the effective neutrino mass (m$_{\beta\beta}$) and the half-life can be expressed as: 
 
 
 \begin{equation}
@@ -373,7 +373,7 @@ $^{\text{238}}$U $\rightarrow$ $^{\text{238}}$Pu & 1145.8  $\pm$ 1.7 & 99.275 & 
 \bigskip
 
 
-\NI where m$_\text{e}$ is the electron mass, and m$_{\beta\beta}$ can be written as a function of PMNS matrix element and neutrino masses (m$_{\nu_\text{\i}}$) : 
+\NI where m$_\text{e}$ is the electron mass, and m$_{\beta\beta}$ can be written as a function of PMNS matrix elements and neutrino masses (m$_{\nu_\text{\i}}$) : 
 
 
 \begin{equation}
@@ -405,7 +405,7 @@ $^{\text{238}}$U $\rightarrow$ $^{\text{238}}$Pu & 1145.8  $\pm$ 1.7 & 99.275 & 
 \end{figure}
 
 
-\NI The green bands represent the reachable values for m$_{\beta\beta}$ in case of normal and inverted ordering of neutrino mass. The width of each of these bands is mainly governed by the uncertainty over the CP-violating phase. The 0$\nu\beta\beta$ experiments put limit on m$_{\beta\beta}$ (y-axis), during direct and indirect neutrino mass measurements set limit on the lighest neutrino mass (x-axis). The coming 0$\nu\beta\beta$ projects could probe the inverted ordering area with real prospects for either observing of excluding 0$\nu\beta\beta$ mediated by the mass mechanism (in case nature chosen the inverted ordering).
+\NI The green bands represent the reachable values for m$_{\beta\beta}$ in case of normal and inverted ordering of neutrino mass. The width of each of these bands is mainly governed by the uncertainty over the CP-violating phase. The 0$\nu\beta\beta$ experiments put limit on m$_{\beta\beta}$ (y-axis), during direct and indirect neutrino mass measurements set limits on the lighest neutrino mass (x-axis). The coming 0$\nu\beta\beta$ projects could probe the inverted ordering area with real prospects for either observing of excluding 0$\nu\beta\beta$ mediated by the mass mechanism (in case nature chosen the inverted ordering).
 
 
 \bigskip
@@ -577,7 +577,7 @@ $^{\text{238}}$U $\rightarrow$ $^{\text{238}}$Pu & 1145.8  $\pm$ 1.7 & 99.275 & 
 \bigskip
 
 
-\NI All the methods which have been implemented for the calculation of NME involve two different stages. In a first step, the interactions between nucleons, the nuclear physic informations and the physic mechanism behind 0$\nu\beta\beta$ are incorporated via a many-body Hamiltonian. The second step consists of an introduction of a mean field to take into account the nuclear structure and residual interactions. It is in this second that the models tend to differ by introducing different approximations and/or simplifying assumptions. This section briefly describes the different models and the difference between them. A comparison of the NME calculation results are given in the last section. 
+\NI All the methods which have been implemented for the calculation of NME involve two different stages. In a first step, the interactions between nucleons, the nuclear physic informations and the physic mechanism behind 0$\nu\beta\beta$ are incorporated via a many-body Hamiltonian. The second step consists of an introduction of a mean field to take into account the nuclear structure and residual interactions. It is in this second that the models tend to differ by introducing different approximations and/or simplifying assumptions. This section briefly describes the different models and the difference between them. %A comparison of the NME calculation results are given in the last section. 
 
 
 \subsubsection{Interacting shell model}
@@ -625,7 +625,7 @@ $^{\text{238}}$U $\rightarrow$ $^{\text{238}}$Pu & 1145.8  $\pm$ 1.7 & 99.275 & 
 \bigskip
 
 
-\NI Today it does not exist direct experimental studies to check M$^{0\nu}$ except measurement of the 0$\nu\beta\beta$ half-life. The large range in M$^{0\nu}$ translates into a large uncertainty on the limits for 0$\nu\beta\beta$ processes. Different ways are explored to succeed in reducing uncertainties. Recently, thanks to the measurements of $\beta$ and $\beta\beta$-decay half-lives for different isotopes, QRPA calculations of M$_{\text{GT}}^{0\nu}$ can be more constrained leading to a reduction of the M$^{0\nu}$ uncertainties. Moreover, the different models used to compute the NME values are also used to predict some observables of nuclear structure such as valence nucleon occupencies or nucleon paring correlations. A dedicated program has been created to measure these observables in order to compare them with the theoretical predictions~\cite{ReduceNMEuncertainties}. These results could aslo be used to tune the models.  
+\NI Today it does not exist direct experimental studies to check M$^{0\nu}$ except measurement of the 0$\nu\beta\beta$ half-life. The large range in M$^{0\nu}$ translates into a large uncertainty on the limits for 0$\nu\beta\beta$ processes. Different ways are explored to succeed in reducing uncertainties. Recently, thanks to the measurements of $\beta$ and $\beta\beta$-decay half-lives for different isotopes, QRPA calculations of M$_{\text{GT}}^{0\nu}$ can be more constrained leading to a reduction of the M$^{0\nu}$ uncertainties. Moreover, the different models used to compute the NME values are also used to predict some observables of nuclear structure such as valence nucleon occupencies or nucleon paring correlations. A dedicated program has been created to measure these observables in order to compare them with the theoretical predictions~\cite{ReduceNMEuncertainties}. These results could aslo be used to tune the models. Finally, the decay via the excited state of the daugher nucleus can bring additional informations on the nuclear structure and help for the NME calculations. 
 
 
 \begin{figure}[h!]
@@ -642,8 +642,7 @@ $^{\text{238}}$U $\rightarrow$ $^{\text{238}}$Pu & 1145.8  $\pm$ 1.7 & 99.275 & 
 \section{Experimental search for $\beta\beta$ decays}
 
 
-\NI The $\beta\beta$ decays are very rare and are expected to be very challenging to observe. But, the detection of 0$\nu\beta\beta$ decay would provide the Majorana nature of the neutrino and would give access to their absolute mass. Futhermore the measurements of 2$\nu\beta\beta$ decay rate improve our understanding of the nuclear physics. For these reasons, many experiment searching for $\beta\beta$~decays have been built around the world. This section presents the general considerations to design a $\beta\beta$ experiment in order to reach the best sensitivity on the $\beta\beta$ processes.
-
+\NI Despite that the 2$\nu\beta\beta$ decays are very rare and are expected to be very challenging to observe, their observation is a confirmation of the SM at the second order which provide additional informations on the nuclear structure. Futhermore, the detection of 0$\nu\beta\beta$ decay would provide the Majorana nature of the neutrino and would give access to their absolute mass. It is for these reasons that many experiment searching for $\beta\beta$~decays have been built around the world. This section presents the general considerations to design a $\beta\beta$ experiment in order to reach the best sensitivity on the $\beta\beta$ processes.
 
 
 \subsection{Half-life sensitivity for 0$\nu\beta\beta$}
@@ -677,13 +676,13 @@ $^{\text{238}}$U $\rightarrow$ $^{\text{238}}$Pu & 1145.8  $\pm$ 1.7 & 99.275 & 
 
 \bigskip
 
-\NI The choice of the $\beta\beta$ isotope is also important when looking for maximise the signal. Indeed, as shown in Eq.~\ref{eq:decayRate2nu} and~\ref{eq:halflife0nu} the phase space factors and the NME are related with the decay rate. Isotopes with high phase space factor and NME have a short half-live compared to the other. As a result, in the same amount of time more decay can occur, which makes their detection more likely. Note that the molar mass of the isotope plays also a role in the total number of atoms but is generally not considered since it is a secondary consideration compared to the phase space factor and NME parameters.
+\NI The choice of the $\beta\beta$ isotope is also important when looking for maximise the signal. Indeed, as shown in Eq.~\ref{eq:decayRate2nu} and~\ref{eq:halflife0nu} the phase space factors and the NME are related with the decay rate. Isotopes with high phase space factor and NME have a shorter half-live compared to the other. As a result, in the same amount of time, more decay can occur, which makes their detection more likely. Note that the molar mass of the isotope plays also a role in the total number of atoms but is generally not considered since it is a secondary consideration compared to the phase space factor and NME parameters.
 
 
 \bigskip
 
 
-\NI Finally, the natural abundance and the ability to enrich an isotope must be taken into consideration. To reach a considerable mass of $\beta\beta$ isotope, it is simpler and cheaper is the isotope is already present in large quantities in nature. According the isotope, it exists different techniques of enrichment having different yield and prices. The majority of the isotopes can be enriched via centrifugation method which is relatively cheap and allows the enrichment up to large mass. For some isotope, such as $^{48}$Ca, only electromagnetic separation is available, which only allow the enrichment of smaller quantities.
+\NI Finally, the natural abundance and the ability to enrich an isotope must be taken into consideration. To reach a considerable mass of $\beta\beta$ isotope, it is simpler and cheaper if the isotope is already present in large quantities in nature. According the isotope, it exists different techniques of enrichment having different yield and prices. The majority of the isotopes can be enriched via centrifugation method which is relatively cheap and allows the enrichment up to large mass. For some isotope, such as $^{48}$Ca, only electromagnetic separation is available, which only allow the enrichment of smaller quantities.
 
 
 \subsection{Minimising background}
@@ -703,7 +702,7 @@ $^{\text{238}}$U $\rightarrow$ $^{\text{238}}$Pu & 1145.8  $\pm$ 1.7 & 99.275 & 
 \bigskip
 
 
-\NI The two main isotopes to the background are the radioactive elements $^{214}$Bi and $^{208}$Tl, which are naturally present in small quantities in the materials from the $^{238}$U and $^{232}$Th decay chains shown in Figure~\ref{u238-th232decayChain}. The highest energy $\gamma$-ray is emitted by $^{208}$Tl at 2.6~MeV. To highly reduce these two contributions is preferable to select an isotope with a high Q$_{\beta\beta}$ value.
+\NI The two main isotopes to the background are the radioactive elements $^{\text{214}}$Bi and $^{\text{208}}$Tl, which are naturally present in small quantities in the materials from the $^{\text{238}}$U and $^{\text{232}}$Th decay chains shown in Figure~\ref{u238-th232decayChain}. The highest energy $\gamma$-ray is emitted by $^{\text{208}}$Tl at 2.6~MeV. To highly reduce these two contributions is preferable to select an isotope with a high Q$_{\beta\beta}$ value.
 
 
 \bigskip
@@ -738,13 +737,13 @@ $^{\text{238}}$U $\rightarrow$ $^{\text{238}}$Pu & 1145.8  $\pm$ 1.7 & 99.275 & 
 \section{Double Beta Experiments}\label{sec:DBDexperiment}
 
 
-\NI To design a $\beta\beta$ experiment, several factors must be take into account as demonstrated in Equation~\ref{eq:halflife0nu}. Unfortunately some of these factors are inversly related to each other, such as favored one can deteriorate the others. For example, build an experiment with a huge amount of $\beta\beta$ isotope is not possible without also increase the level of background. As a result, many experimental techniques have been developed that optimize the sensitivity to 0$\nu\beta\beta$ decay in different ways. This section presented the different detector technologies with their advantages and disadvantages. The results obtained for each of the detectors are also given. Note that, if possible, all  the limits are provided as the 90\% confidence level.
+\NI To design a $\beta\beta$ experiment, several factors must be take into account as demonstrated in Equation~\ref{eq:halflife0nu}. Unfortunately some of these factors are inversly related to each other, such as favored one can deteriorate the others. For example, build an experiment with a huge amount of $\beta\beta$ isotope is not possible without also increase the level of background. As a result, many experimental techniques have been developed that optimize the sensitivity to 0$\nu\beta\beta$ decay in different ways. This section presented the different detector technologies with their advantages and disadvantages. The results obtained for each of the detectors are also given. Note that, if possible, all  the limits are provided at the 90\% confidence level.
 
 
 \subsection{Semiconductor experiments}
 
 
-\NI The semiconductor experiments use a $\beta\beta$ isotope which acts as both the source and the detector material. The $\beta\beta$ isotope, usually~$^{\text{76}}$Ge, is placed between to electrodes to form a diode. Ionizing radiation creates electron-hole pairs in the material. The electrons are drifted towars the electrodes and produce signals which are proportional to the total energy of the decay. So with these experiments it is not possible to identify the mechanism behind 0$\nu\beta\beta$ decay. However, due to their homogeneous design, semiconductor experiments have a very high acceptance and detection efficiency. To suppress the electronic noise, these detectors typically work at cryogenic temperatures, which also have the advantage to obtain a very good energy resolution of $\sim$~0.3~\% FWHM at the Q$_{\beta\beta}$ value of $^{\text{76}}$Ge~\cite{QbetabetaGe}. By using the segmentation of the semiconductors and by analysing the electrode pulse shapes some background events can be removed.  Five old and recent semiconductor experiments are decribed in the following section.
+\NI The semiconductor experiments use a $\beta\beta$ isotope which acts as both the source and the detector material. The $\beta\beta$ isotope, usually~$^{\text{76}}$Ge, is placed between to electrodes to form a diode. Ionizing radiation creates electron-hole pairs in the material. The electrons are drifted towars the electrodes and produce signals which are proportional to the total energy of the decay. Due to their homogeneous design, semiconductor experiments have a very high acceptance and detection efficiency. These detectors typically work at cryogenic temperatures, to suppress the electronic noise. This has also the advantage to obtain a very good energy resolution, $\sim$~0.3~\% FWHM at the Q$_{\beta\beta}$ value of $^{\text{76}}$Ge~\cite{QbetabetaGe}. By using the segmentation of the semiconductors and by analysing the electrode pulse shapes some background events can be removed. These detectors have only access to the total deposit energy and can not measure the energy of each electron or the angle between them, in such a way it is not possible to identify the mechanism behind 0$\nu\beta\beta$ decay. Five old and recent semiconductor experiments are decribed in the following section.
 
 
 \subsubsection{Heidelberg-Moscow}
@@ -756,13 +755,13 @@ $^{\text{238}}$U $\rightarrow$ $^{\text{238}}$Pu & 1145.8  $\pm$ 1.7 & 99.275 & 
 \bigskip
 
 
-\NI In 2001, a part of the collaboration claimed that the peak at 2039~keV present in the energy spectrum, shown in Figure~\ref{HMexperimentClaim} corresponds to a 0$\nu\beta\beta$ decay signal~\cite{HeidelbergMoscow2}. For an exposure 71.7~kg~y, the half-life has been measured to be T$_{\text{1/2}}^{0\nu}$~=~1.19$^{\text{+2.99}}_{\text{-0.50}}$ $\times$~10$^{\text{25}}$~y which corresponds to $\langle \text{m}_{\beta\beta} \rangle$~<~100~-~900~meV~\cite{HeidelbergMoscow2}.
+\NI In 2001, a part of the collaboration claimed that the peak at 2039~keV present in the energy spectrum, shown in Figure~\ref{HMexperimentClaim} corresponds to a 0$\nu\beta\beta$ decay signal~\cite{HeidelbergMoscow2}. For an exposure 71.7~kg~y, the half-life has been measured to be T$_{\text{1/2}}^{0\nu}$~=~1.19 $^{\text{+2.99}}_{-\text{0.50}}$ $\times$~10$^{\text{25}}$~y which corresponds to $\langle \text{m}_{\beta\beta} \rangle$~<~100~-~900~meV~\cite{HeidelbergMoscow2}.
 
 
 \bigskip
 
 
-\NI This claim is controversial because of the presence of an unidentified peak at 2030~keV and also because of the ratios of the $^{\text{214}}$Bi peaks are incorrect. The background and the systematic uncertainties of the experiment were also probably underestimated~\cite{HeidelbergMoscow3}. Moreover, results obtained by recent experiments searching 0$\nu\beta\beta$ decay in $^{\text{76}}$Ge strongly disfavour the claim.
+\NI This claim is controversial because of the presence of an unidentified peak at 2030~keV and also because of the ratios of the $^{\text{214}}$Bi peaks are incorrect. The background and the systematic uncertainties of the experiment were also probably underestimated~\cite{HeidelbergMoscow3}. Moreover, results obtained by recent experiments searching 0$\nu\beta\beta$ decay in $^{\text{76}}$Ge strongly disfavour this claim.
 
 
 
@@ -813,7 +812,7 @@ $^{\text{238}}$U $\rightarrow$ $^{\text{238}}$Pu & 1145.8  $\pm$ 1.7 & 99.275 & 
 \subsubsection{MAJORANA}
 
 
-The MAJORANA experiment will also search for 0$\nu\beta\beta$ decay with enriched $^{\text{76}}$Ge crystals. This experiment claims to surpass the sensitivity of H-M and IGEX sensitivity by improving the radiopurity of the detector materials, by using more effective shieldings and by increasing the background-signal discrimination. Their aims is to achieve an energy resolution better than 3~keV and a very low background rate of 1~count/tonne/y in the ROI. A demonstrator module (MJD) is currently operating at the Sanford Underground Reach Facility to show that the background levels can be achieved and extended to a tonne-scale experiment. If the desired background levels is achieved with the demonstrator, a sensitivity of $\langle \text{m}_{\beta\beta} \rangle$~<~80~-~160~meV can be reached after 2.5~y of data taking~\cite{MAJORANA}.
+The MAJORANA experiment will also search for 0$\nu\beta\beta$ decay with enriched $^{\text{76}}$Ge crystals. This experiment claims to surpass the sensitivity of H-M and IGEX sensitivity by improving the radiopurity of the detector materials, by using more effective shieldings and by increasing the background-signal discrimination. Their aims are to achieve an energy resolution better than 3~keV and a very low background rate of 1~count/tonne/y in the ROI. A demonstrator module (MJD) is currently operating at the Sanford Underground Reach Facility to show that the background levels can be achieved and extended to a tonne-scale experiment. If the desired background levels is achieved with the demonstrator, a sensitivity of $\langle \text{m}_{\beta\beta} \rangle$~<~80~-~160~meV can be reached after 2.5~y of data taking~\cite{MAJORANA}.
 
 
 \bigskip
@@ -843,7 +842,7 @@ The MAJORANA experiment will also search for 0$\nu\beta\beta$ decay with enriche
 \subsubsection{ELEGANT VI}
 
 
-\NI The ELEGANT VI experiment searched for 0$\nu\beta\beta$ decay in 23 CaF$_\text{2}$(Eu) crystal scintillators with 7.6~g of enriched~$^{\text{48}}$Ca. With a exposure of 0.015~kg~y, the experiment set a limit on the half-life have been set to be T$_{\text{1/2}}^{0\nu}$~>~5.8~$\times$~10$^{\text{22}}$~y corresponding to~$\langle \text{m}_{\beta\beta} \rangle$~<~3.2~-~22~meV~\cite{ELEGANTVI}. The experiment opereted in Kamioka. \\
+\NI The ELEGANT VI experiment searched for 0$\nu\beta\beta$ decay in 23 CaF$_\text{2}$(Eu) crystal scintillators with 7.6~g of enriched~$^{\text{48}}$Ca. With a exposure of 0.015~kg~y, the experiment set a limit on the half-life have been set to be T$_{\text{1/2}}^{0\nu}$~>~5.8~$\times$~10$^{\text{22}}$~y corresponding to~$\langle \text{m}_{\beta\beta} \rangle$~<~3.2~-~22~meV~\cite{ELEGANTVI}. The experiment operated in Kamioka. \\
 
 
 \subsubsection{CANDLESIII}
@@ -891,7 +890,7 @@ The MAJORANA experiment will also search for 0$\nu\beta\beta$ decay with enriche
 \subsection{Bolometer experiments}
 
 
-\NI The bolometer experiments detect the ionizing radiations by measuring small increases in temperature of a material. The increase of the temperature change the electrical properties of the medium which can be measured and related to the ionazing particle energy. These detector operate at very low temperature, on the order~mK, to obtain very good good energy resolution. They also measure only the total energy deposited by ionizing and can not discriminate the particle type which can be troublesome to identify the background. 
+\NI The bolometer experiments detect the ionizing radiations by measuring small increases in temperature of a material. The increase of the temperature change the electrical properties of the medium which can be measured and related to the ionazing particle energy. These detector operate at very low temperature, on the order of~mK, to obtain very good energy resolution. They also measure only the total energy deposited by ionizing and can not discriminate the particle type which can be troublesome to identify the background. 
 
 
 \subsubsection{CUORICINO}
@@ -903,7 +902,7 @@ The MAJORANA experiment will also search for 0$\nu\beta\beta$ decay with enriche
 \subsubsection{CUORE}
 
 
-\NI CUORE (Cryogenic Underground Observatory for Rare Events) is the continuation of the CUORICINO experiment. The number of Te0$_\text{2}$ crystals will be increased to 988 to reach a mass of 204~kg in~$^{\text{130}}$Te. The expected sensitivy is T$_{\text{1/2}}^{0\nu}$~>~2.1~$\times$~10$^{\text{26}}$~y corresponding to $\langle \text{m}_{\beta\beta} \rangle$~<~35~-~82~meV. A prototype detector, CUORE-0, consisting of 52 crystals and 10.7~kg of $^{\text{130}}$Te is currently running. A first limit have been set to T$_{\text{1/2}}^{0\nu}$~>~8~$\times$~10$^{\text{24}}$~y which corresponds to $\langle \text{m}_{\beta\beta} \rangle$~<~180~-~420~meV~\cite{CUORE} .
+\NI CUORE (Cryogenic Underground Observatory for Rare Events) is the continuation of the CUORICINO experiment. The number of Te0$_\text{2}$ crystals will be increased to 988 to reach a mass of 204~kg in~$^{\text{130}}$Te. The expected sensitivity is T$_{\text{1/2}}^{0\nu}$~>~2.1~$\times$~10$^{\text{26}}$~y corresponding to $\langle \text{m}_{\beta\beta} \rangle$~<~35~-~82~meV. A prototype detector, CUORE-0, consisting of 52 crystals and 10.7~kg of $^{\text{130}}$Te is currently running. A first limit have been set to T$_{\text{1/2}}^{0\nu}$~>~8~$\times$~10$^{\text{24}}$~y which corresponds to $\langle \text{m}_{\beta\beta} \rangle$~<~180~-~420~meV~\cite{CUORE} .
 
 
 \subsubsection{LUCIFER}
@@ -921,7 +920,7 @@ The MAJORANA experiment will also search for 0$\nu\beta\beta$ decay with enriche
 \bigskip
 
 
-\NI The most common isotope for $\beta\beta$ decay studies with TPC is $^{\text{136}}$Xe, which also have the advantage to provide both ionization and scintillation signals. This scintillation light can be used to perform more accurate energy measurement than what is possible the ionization signal alone.    
+\NI The most common isotope for $\beta\beta$ decay studies with TPC is $^{\text{136}}$Xe, which also have the advantage to provide both ionization and scintillation signals. This scintillation light can be used to perform more accurate energy measurement than what is possible with the ionization signal alone.    
 
 
 \subsubsection{EXO}
@@ -939,7 +938,7 @@ The MAJORANA experiment will also search for 0$\nu\beta\beta$ decay with enriche
 \bigskip
 
 
-\NI In the futur, the EXO experiment could be scale up to the tonne scale. A new technique to tag the $^{\text{136}}$Ba ions, daughter of the $^{\text{136}}$Xe, is investigated to reduce the the background level. With a tonne scale experiment, a sensitivity of T$_{\text{1/2}}^{0\nu}$~>~2~$\times$~10$^{\text{27}}$~y, corresponding to $\langle \text{m}_{\beta\beta} \rangle$~<~15~-~32~meV could be achieved.
+\NI In the futur, the EXO experiment could be scale up to the tonne scale. A new technique to tag the $^{\text{136}}$Ba ions, daughter of the $^{\text{136}}$Xe, is investigated to reduce the background level. With a tonne scale experiment, a sensitivity of T$_{\text{1/2}}^{0\nu}$~>~2~$\times$~10$^{\text{27}}$~y, corresponding to $\langle \text{m}_{\beta\beta} \rangle$~<~15~-~32~meV could be achieved.
 
 
 \begin{figure}[h!]
@@ -957,14 +956,14 @@ The MAJORANA experiment will also search for 0$\nu\beta\beta$ decay with enriche
 \subsubsection{NEXT}
 
 
-\NI The NEXT experiment (Neutrino Experiment with a Xenon TPC) is an experiment which will operate in the Canfranc Underground Laboratory in Spain, looking for 0$\nu\beta\beta$ decay in~$^{\text{136}}$Xe. It consists of of a cylindrical TPC using gaseous xenon at high pressure. The detector will detect both scintillation and ionization signals. The scintillation light will be detected by PMTs at one end cad while the ionization signal will be amplified through electroluminescence to produce a signal that can be read out by silicon PM. This second signal provide tracking information and allow improvement of the energy resolution. A prototype detector, NEXT-100, with 100~kg of~$^{\text{136}}$Xe is currently operating, an sensitivity of T$_{\text{1/2}}^{0\nu}$~>~1.9~$\times$~10$^{\text{25}}$~y is expected corresponding to $\langle \text{m}_{\beta\beta} \rangle$~<~70~-~150~meV~\cite{NEXT}. The advantage of NEXT-100 is that it is readily scalable. According the successful of the prototype, it is possible to enlarge it to contain a tonne of material to reach a sensitivity of $\langle \text{m}_{\beta\beta} \rangle$~<~15~-~32~meV.
+\NI The NEXT experiment (Neutrino Experiment with a Xenon TPC) is an experiment which will operate in the Canfranc Underground Laboratory in Spain, looking for 0$\nu\beta\beta$ decay in~$^{\text{136}}$Xe. It consists of a cylindrical TPC using gaseous xenon at high pressure. The detector will detect both scintillation and ionization signals. The scintillation light will be detected by PMTs at one end cad while the ionization signal will be amplified through electroluminescence to produce a signal that can be read out by silicon PM. This second signal provide tracking information and allow improvement of the energy resolution. A prototype detector, NEXT-100, with 100~kg of~$^{\text{136}}$Xe is currently operating, an sensitivity of T$_{\text{1/2}}^{0\nu}$~>~1.9~$\times$~10$^{\text{25}}$~y is expected corresponding to $\langle \text{m}_{\beta\beta} \rangle$~<~70~-~150~meV~\cite{NEXT}. The advantage of NEXT-100 is that it is readily scalable. According the successful of the prototype, it is possible to enlarge it to contain a tonne of material to reach a sensitivity of $\langle \text{m}_{\beta\beta} \rangle$~<~15~-~32~meV.
 
 
 
 \subsection{Tracker-calorimeter experiments}
 
 
-\NI The tracker-calorimeter experiments separate the $\beta\beta$ isotope from the detection device which allows to investigate the $\beta\beta$ decay for any candidate isotope. The track of the two electrons and the their energy are measured by two disctinct detectors. This technique allows to reconstruct the full topology and kinematics of individual particle within an event, which results in excellent background rejection and also give the possibility to distinguish the mechanism behind the 0$\nu\beta\beta$ decay. However, the tracker-calorimeter experiments, due to the separation of the isotope from the rest of the detector, generally suffer from poorer energy resolution compared to the other kind of $\beta\beta$ detectors. 
+\NI The tracker-calorimeter experiments separate the $\beta\beta$ isotope from the detection device which allows to investigate the $\beta\beta$ decay for many candidate isotope. The track of the two electrons and the their energy are measured by two disctinct detectors. This technique allows to reconstruct the full topology and kinematics of individual particle within an event, which results in excellent background rejection and also give the possibility to distinguish the mechanism behind the 0$\nu\beta\beta$ decay. However, the tracker-calorimeter experiments, due to the separation of the isotope from the rest of the detector, generally suffer from poorer energy resolution compared to the other kind of $\beta\beta$ detectors. 
 
 
 \bigskip
@@ -976,7 +975,7 @@ The MAJORANA experiment will also search for 0$\nu\beta\beta$ decay with enriche
 \section{Summary and status of the $\beta\beta$ researches}\label{sec:StatusDBD}
 
 
-\NI Today, the direct measurment of the 2$\nu\beta\beta$ decay have been made for nine isotopes. The most accurate measurements to date are presented in Table~\ref{tab:summaryBB2NUmeasurements}. Dur to its ability to measure different isotopes, NEMO-3 is often quoted. $^{\text{76}}$Ge and $^{\text{136}}$Xe have been measured by GERDA-I and EXO-200 respectively.
+\NI Today, the direct measurment of the 2$\nu\beta\beta$ decay have been made for nine isotopes. The most accurate measurements to date are presented in Table~\ref{tab:summaryBB2NUmeasurements}. Due to its ability to measure different isotopes, NEMO-3 is often quoted. $^{\text{76}}$Ge and $^{\text{136}}$Xe have been measured by GERDA-I and EXO-200 respectively.
 
 
 \bigskip
@@ -988,7 +987,7 @@ The MAJORANA experiment will also search for 0$\nu\beta\beta$ decay with enriche
 \bigskip
 
 
-\NI When different experiment investigate the same isotope, their results can be combined to obtain a stronger half-life limit. For example, by combining the GERDA results with H-M and IGEX, a limit of T$_{\text{1/2}}^{\text{0}\nu}$ > 3.0 $\times$ 10$^{\text{25}}$~y corresponding to $\langle \text{m}_{\beta\beta} \rangle$ < 0.20 - 0.40~eV can be set~\cite{GERDA}.  By combining the results on $^{\text{136}}$Xe from EXO-200 and KamLAND-Zen, the sensitivity is set to T$_{\text{1/2}}^{\text{0}\nu}$ > 3.4 $\times$ 10$^{\text{25}}$~y which corresponds to $\langle \text{m}_{\beta\beta} \rangle$ < 0.12 - 0.25~eV~\cite{KamLAND-Zen}. This results can be summarised in a plot showing the sensitivity on $^{\text{76}}$Ge versus the sensitivity of $^{\text{136}}$Xe for different NME calculations as shown in Figure~\cite{Gerda-EXO-combined}. Both results strongly disfavor the claim. The limit obtained by KamLAND-Zen are represented graphically the Figure~\ref{KamLAND-Zen-results}.
+\NI When different experiment investigate the same isotope, their results can be combined to obtain a stronger half-life limit. For example, by combining the GERDA results with H-M and IGEX, a limit of T$_{\text{1/2}}^{\text{0}\nu}$ > 3.0 $\times$ 10$^{\text{25}}$~y corresponding to $\langle \text{m}_{\beta\beta} \rangle$ < 0.20 - 0.40~eV can be set~\cite{GERDA}.  By combining the results on $^{\text{136}}$Xe from EXO-200 and KamLAND-Zen, the sensitivity is set to T$_{\text{1/2}}^{\text{0}\nu}$ > 3.4 $\times$ 10$^{\text{25}}$~y which corresponds to $\langle \text{m}_{\beta\beta} \rangle$ < 0.12 - 0.25~eV~\cite{KamLAND-Zen}. This results can be summarised in a plot showing the sensitivity on $^{\text{76}}$Ge versus the sensitivity of $^{\text{136}}$Xe for different NME calculations as shown in Figure~\ref{Gerda-EXO-combined}. Both results strongly disfavor the claim. The limit obtained by KamLAND-Zen are represented graphically the Figure~\ref{KamLAND-Zen-results}.
 
 
 \begin{table}[h!]
@@ -1079,7 +1078,10 @@ EXO          & $^{\text{136}}$Xe & 1000 & Scint. TPC    & 15 - 62   & \cite{EXO-
 NEXT         & $^{\text{136}}$Xe & 1000 & Scint. TPC    & 15 - 62   & \cite{NEXT}         \\
 \bottomrule
 \end{tabular}
-\caption{aa}
+\caption{Summary of future $\beta\beta$ experiments. The top panel presents the experiments
+which are either running or under construction. The bottom panel shows
+experiments that have been proposed as successors to the current generation
+of experiments.}
 \label{tab:futureBBexperiment}
 \end{table}
 
